# improved-journey

./: CMakeLists.txt  LICENSE  README.md  configure.bat  configure.sh
assets/Icons34x34byAilsEnglish2013/: source.txt
assets/Pixel Art Icon Pack - RPG/: source.txt
assets/Pixel Art Top Down - Basic/: source.txt
assets/Quest Icons/: source.txt
assets/RPGIconsExtra_by_Ails/: source.txt
assets/lpc-monsters/: source.txt
assets/lpc-wolf-animation/: source.txt
game/: CMakeLists.txt  ToSfml.h  main.cpp
ij/: AssertCast.h  Bot.cpp  Bot.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Direction.cpp  Direction.h  DrawWorld.cpp  DrawWorld.h  EnemyTemplate.cpp  EnemyTemplate.h  FloatingText.cpp  FloatingText.h  FromSfml.h  Input.cpp  Input.h  Int.h  Keyboard.cpp  Keyboard.h  LogicEntity.cpp  LogicEntity.h  Map.cpp  Map.h  Normalize.cpp  Normalize.h  ObjectAnimation.cpp  ObjectAnimation.h  PlayerCharacter.cpp  PlayerCharacter.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  RunGame.cpp  RunGame.h  Sprite.cpp  Sprite.h  (+15 more)
sdl_game/: CMakeLists.txt  main.cpp
sfml_game/: CMakeLists.txt  FromSfml.h  main.cpp
tests/: CMakeLists.txt  tests.cpp
