file(GLOB sources *.h *.cpp)
add_executable(sdl_game ${sources})
target_link_libraries(sdl_game PRIVATE ij_lib)
target_link_libraries(sdl_game PRIVATE SDL2::SDL2-static)
target_link_libraries(sdl_game PRIVATE SDL2::SDL2main)
target_link_libraries(sdl_game PRIVATE SDL2_image::SDL2_image-static)
target_link_libraries(sdl_game PRIVATE SDL2_ttf::SDL2_ttf-static)
if(FO_CLANG_FORMAT)
	add_dependencies(sdl_game clang-format)
endif()
